--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,10 @@
 .navbar {
+    position: sticky;
+    float: inherit;
+    top: 0;
+    left: 0;
     height: 56px;
+    background-color: rgb(32, 32, 35);
 }
 
 .navbar-container {
@@ -24,18 +29,100 @@
     align-items: center;
     height: auto;
 }
-.dark-mode-button-wrapper{
+
+.name h1{
+    font-weight: bold;
+    font-size: larger;
+}
+
+.dark-mode-button-wrapper {
     display: flex;
     align-items: center;
     height: auto;
 }
-.dark-mode-button {
-    background-color: transparent;
-    border: none;
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 26px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
     cursor: pointer;
-    outline: none;
-    padding: 0;
-    appearance: none;
-    height: 30px;
-    width: 30px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 23px;
+    width: 23px;
+    left: 2px;
+    bottom: 1.5px;
+    background-color: darkgrey;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: rgb(49, 49, 52);
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px rgb(49, 49, 52);
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(23px);
+    -ms-transform: translateX(23px);
+    transform: translateX(23px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.sun {
+    width: 20px;
+    height: 20px;
+}
+.sun:before{
+    content: "";
+    background-image: url(../public/dark-mode-sun.svg);
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    top: 3.8px;
+    left: 4px;
+}
+.moon {
+    width: 18px;
+    height: 18px;
+}
+.moon:before{
+    content: "";
+    background-image: url(../public/dark-mode-moon.svg);
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: 5px;
+    left: 28.5px;
 }
