--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+
+  font-family: 'Nunito', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
