--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,10 +1,8 @@
 .navbar {
-    position: sticky;
-    float: inherit;
-    top: 0;
     left: 0;
     height: 56px;
     background-color: rgb(32, 32, 35);
+    z-index: 1000;
 }
 
 .navbar-container {
@@ -22,11 +20,13 @@
     height: auto;
     padding: 5px;
 }
-.snorlax{
+
+.snorlax {
     width: 30px;
     height: 30px;
 
 }
+
 .name {
     color: aliceblue;
     display: flex;
@@ -106,7 +106,7 @@
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    
+
 }
 
 .switch {
@@ -197,4 +197,25 @@ input:checked+.slider:before {
     height: 16px;
     top: 5px;
     left: 28.5px;
+}
+
+@media only screen and (max-width: 767px) {
+    .navbar {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    .dropdown-content {
+        bottom: 43px;
+        left: -50px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .navbar {
+        position: -webkit-sticky;
+        position: sticky;
+        float: inherit;
+        top: 0;
+    }
 }
