--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -18,6 +18,8 @@ $breakpoints: (
 
     .container {
         .profile {
+            margin: 30px 0;
+
             h1 {
                 font-weight: bold;
                 font-size: xx-large;
@@ -31,30 +33,66 @@ $breakpoints: (
         }
 
         section {
-            h1{
+            margin: 5px 0;
+
+            h1 {
                 text-decoration: solid underline rgb(49, 49, 52) 4px;
-                text-underline-offset: 5px;
-                font-size: larger;
-                font-weight: 700;
-                padding: 10px 0;
-            }
-            article{
-                padding: 5px 20px;
-                white-space: pre-line;
                 text-decoration-line: underline;
                 text-decoration-color: rgb(49, 49, 52
                 );
             text-decoration-thickness: 4px;
             text-underline-offset: 5px;
+
+            font-size: larger;
+            font-weight: 700;
+            padding: 10px 0;
+        }
+
+        article {
+            margin: 20px auto;
+            width: 97% !important;
+            white-space: pre-line;
+        }
+
+        .buttonRow {
+            width: 100%;
+            height: 50px;
+            display: flex;
+
+            .btn {
+                text-decoration: none;
+                color: white;
+                background-color: rgb(122, 136, 246);
+                width: 110px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 10px;
             }
         }
 
-        @include mq() {
-            max-width: 732px;
+        .portfolio {
+            justify-content: center;
+            align-items: center;
         }
 
-        @include mq(sm) {
-            width: 100%
+        .resume {
+            justify-content: space-around;
+            align-items: center;
         }
     }
+
+    .works {
+        width: 100%;
+        position: relative;
+    }
+    @include mq() {
+        max-width: 732px;
+    }
+    
+    @include mq(sm) {
+        width: 100%
+    }
+}
 }
