adjust btn size

--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -63,7 +63,7 @@ $breakpoints: (
                 text-decoration: none;
                 color: white;
                 background-color: rgb(122, 136, 246);
-                width: 110px;
+                padding: 0 40px;
                 height: 40px;
                 display: flex;
                 justify-content: center;
