--- a/styles/snorlax.module.scss
+++ b/styles/snorlax.module.scss
@@ -11,6 +11,33 @@ $--height: 400px;
     animation: fall linear forwards;
 }
 
+.linkSnowContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    width: auto;
+    height: 50px;
+    position: absolute;
+    top: -30px;
+    z-index: 1000;
+    animation: fall linear forwards, shake 1s linear;
+    text-decoration: none;
+
+    .linkImg {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        margin-bottom: 3px;
+    }
+
+    .clickme {
+        color: rgb(186, 11, 11);
+        font-size: small;
+    }
+}
+
 @keyframes fall {
     from {
         top: 0;
@@ -18,5 +45,32 @@ $--height: 400px;
 
     to {
         top: 90%;
+    }
+}
+
+@keyframes shake {
+
+    10%,
+    90% {
+        transform: translate3d(-3px, 0, 0);
+        transform: scale(1);
+    }
+
+    20%,
+    80% {
+        transform: translate3d(3px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-6px, 0, 0);
+        transform: scale(1.5);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(6px, 0, 0);
+        transform: scale(1);
     }
 }
