add return to up button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,8 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 
-  font-family: 'Nunito', sans-serif;
+  	font-family: 'Nunito', sans-serif;
+	scroll-behavior: smooth;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
