--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -66,7 +66,7 @@ $breakpoints: (
             width: 100%;
             height: 50px;
             display: flex;
-            align-items: end;
+            align-items: flex-end;
             .btn {
                 text-decoration: none;
                 color: white;
