--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -52,6 +52,10 @@ $breakpoints: (
             margin: 20px auto;
             width: 97% !important;
             white-space: pre-line;
+
+        }
+        .about{
+            line-height: 1.6;
         }
 
         .buttonRow {
