--- a/styles/skillbar.module.scss
+++ b/styles/skillbar.module.scss
@@ -1,7 +1,11 @@
 .skillbar{
+    align-self: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     max-width: 300px;
+    width: 80%;
+
     .title{
         display: flex;
         flex-direction: row;
