--- a/styles/skillbar.module.scss
+++ b/styles/skillbar.module.scss
@@ -3,16 +3,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 300px;
+    max-width: 400px;
     width: 80%;
-
+    margin-bottom: 10px;
     .title{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
 
         h1{
-            font-size: small !important;
+            font-size: medium !important;
             text-decoration: none !important;
         }
     }
@@ -23,11 +23,13 @@
        border-radius: 5px;
        div{
            height: 100%;
+           width: 0%;
            border-radius: 5px;
-
+           background-color: #5465ff;
            animation-name: load;
            animation-duration: 4s;
            animation-timing-function: ease;
+           transition: width 2s;
        }
 
        @keyframes load {
