change design's color

--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -66,7 +66,7 @@ $breakpoints: (
             .btn {
                 text-decoration: none;
                 color: white;
-                background-color: rgb(122, 136, 246);
+                background-color: #5465ff;
                 padding: 0 40px;
                 height: 40px;
                 display: flex;
