--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -70,7 +70,7 @@ $breakpoints: (
             .btn {
                 text-decoration: none;
                 color: white;
-                background-color: rgb(122, 136, 246);
+                background-color: #5465ff;
                 width: 100px;
                 height: 40px;
                 display: flex;
