--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -33,14 +33,16 @@ $breakpoints: (
     .pic {
         position: relative;
         width: 52%;
-        height: 100%;
+        height: 80%;
         background-color: aqua;
         border-radius: 10px;
         margin-right: 20px;
 
         @include mq(sm) {
             width: 90%;
-            height: 250px;
+            height: 200px;
+            max-width: 300px;
+            max-height: 200PX;
             margin: auto;
         }
     }
@@ -54,6 +56,7 @@ $breakpoints: (
         display: flex;
         flex-direction: column;  
         justify-content: space-between;
+        height: 80%;
         .description{
             width: 100%;
 
@@ -87,6 +90,7 @@ $breakpoints: (
 
         @include mq(sm) {
             width: 90%;
+            max-width: 300px;
             margin: auto;
             margin-top: 10px;
         }
