--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -6,5 +6,5 @@
     align-items: center;
     justify-content: center;
     background-color: transparent;
-    color: white;
+    color: var(--color-primary-font);
 }
