--- a/styles/skill.module.scss
+++ b/styles/skill.module.scss
@@ -28,13 +28,13 @@ $breakpoints: (
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                background-color: #313134;
+                background-color: var(--color-sub-background);
                 border-radius: 10px;
 
                 height: 100%;
 
                 .segment {
-                    background-color: white;
+                    background-color: var(--color-primary-background);
                     border: none;
                     border-radius: 10px;
                     padding: 5px;
@@ -84,7 +84,7 @@ $breakpoints: (
 
             .navigation::before {
                 content: "";
-                background: #5465ff;
+                background: var(--color-primary-skill);
                 border-radius: 8px;
                 width: 45px;
                 height: var(--highlight-height);
