--- a/styles/skillbar.module.scss
+++ b/styles/skillbar.module.scss
@@ -25,7 +25,7 @@
            height: 100%;
            width: 0%;
            border-radius: 5px;
-           background-color: #5465ff;
+           background-color: var(--color-primary-skill);
            animation-name: load;
            animation-duration: 4s;
            animation-timing-function: ease;
