--- a/styles/work.module.scss
+++ b/styles/work.module.scss
@@ -12,7 +12,7 @@ $breakpoints: (
     height:300px;
     width: 100%;
     border-radius: 10px;
-    background-color: rgb(49, 49, 52);
+    background-color: var(--color-sub-background);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,8 +72,8 @@ $breakpoints: (
             align-items: flex-end;
             .btn {
                 text-decoration: none;
-                color: white;
-                background-color: #5465ff;
+                color: var(--color-primary-font);
+                background-color: var(--color-primary-button);
                 width: 100px;
                 height: 40px;
                 display: flex;
