--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -147,7 +147,8 @@
 }
 
 input:checked+.slider {
-    background-color: var(--color-primary-background);
+    /* background-color: var(--color-primary-background); */
+    background-color: grey;
 }
 
 input:focus+.slider {
